# ruststeve

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  cast-one.sh  gen_dashboard.sh  isolation-test.sh  portal-test.sh  race-loop.sh  race.sh  stop-race.sh
src/: bot_utils.rs  main.rs  memory.rs  state.rs  steps.rs  survival.rs  types.rs
src/tasks/: bucket.rs  craft.rs  food.rs  gather_wood.rs  mining.rs  mod.rs  portal.rs  smelt.rs
